<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">naiz:</string>
    <string name="login_menu">Sartu</string>
    <string name="Login">Sartu</string>
    <string name="logout">Saioa amaitu</string>
    <string name="Signin">Erregistratu</string>
    <string name="Username">Erabiltzailea</string>
    <string name="Password">Pasahitza</string>
    <string name="title_activity_welcome">Ongi etorri!</string>
   <string name="exit">Atzera saioa amaitu gabe</string>
    <string name="favorites_menu">Gogokoak</string>
    <string name="testu_tamaina_tit">Aldatu testu tamaina</string>
    <string name="testsize_menu">Testu tamaina</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >naiz:</item>
        <item >Gara</item>
        <item >Info7</item>
        <item >Gaur8</item>
        <item >Kazeta</item>
        <item >Mediabask</item>
        <item >Eguraldia</item>
        <item >Gogokoak</item>
        <item >Blogak</item>
        <item >Iritzia</item>
        <item >naiz+</item>
        <item >Agenda</item>
        <item >Sartu</item>
    </string-array>
    
    <string-array name="herrialdespinnerItems">
    <item>araba</item>
    <item>bizkaia</item>
    <item>gipuzkoa</item>
    <item>lapurdi</item>
    <item>nafarroa</item>
    <item>nafarroa-beherea</item>
    <item>zuberoa</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item><!-- naiz -->
        <item>@drawable/ic_g</item><!-- gara -->
        <item>@drawable/ic_i7</item><!-- info7 -->
        <item>@drawable/ic_g8</item><!-- gaur8 -->
        <item>@drawable/ic_k</item><!-- kazeta -->
        <item>@drawable/ic_m</item><!-- mediabask -->
        <item>@drawable/ic_e</item>
        <item>@drawable/ic_action_favorite</item>
        <item>@drawable/ic_b</item>
        <item>@drawable/ic_i</item>
        <item>@drawable/ic_n</item>
        <item>@drawable/ic_a</item>
        <item>@drawable/ic_action_person</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="logo">Logoa</string>
    <string name="titulua">titulua</string>
    <string name="saila">Saila</string>
    <string name="productos_destacados">Berri nagusiak</string>
    <string name="message_empty_layout_fav">Gogokorik ez duzu</string>
    
    <string name="action_share">Partekatu</string>
    <string name="action_previous">Aurrekoa</string>
    <string name="action_next">Hurrengoa</string>
    <string name="action_finish">Amaitu</string>
    <string name="action_settings">Aukerak</string>
    
    <string name="add_favorites_menu">Gogokoak</string>
    <string name="action_add_fav_item">Gehitu gogokoa</string>
    <string name="action_remove_fav_item">Ezabatu gogokoa</string>
    <string name="action_refresh">Eguneratu</string>

    <string name="appwidget_text_format">
        <xliff:g id="prefix">%1$s</xliff:g>: 
        <xliff:g id="time">%2$s</xliff:g>
    </string>
    
</resources>
