<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:paddingBottom="@dimen/activity_vertical_margin"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/img_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_donde" />
   <Button
      android:id="@+id/buttonlogout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="146dp"
      android:text="@string/logout" />

   <TextView
      android:id="@+id/ongietorria"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/buttonlogout"
      android:layout_alignParentTop="true"
      android:layout_marginTop="64dp"
      android:text="@string/title_activity_welcome"
      android:textAppearance="?android:attr/textAppearanceLarge" />

   <Button
      android:id="@+id/buttonExit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/buttonlogout"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="43dp"
      android:text="@string/exit" />

</RelativeLayout>